修改头部底部

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=6f72e7eb6c719cd18246",
+    "/css/app.css": "/css/app.css?id=87447d6f2f6bd40ece20"
 }
